# testanm24

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/an24net/: main.py
